[package]
name = "parquet-arrow"
version = "0.2.0"
edition = "2021"

[dependencies]
arrow-array = "54.2.1"
arrow-ipc = { version = "54.2.1", features = ["zstd"] }
arrow-schema = { version = "54.2.1", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
parquet = "54.2.1"
serde_json = "1.0.140"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
